use Java 17 features; remove deprecated code; some cleanup